Criação de endpoint para mapas com dados
