# server/common/api.yml
@@ -8,6 +8,8 @@ servers:
 tags:
   - name: Mapas
     description: API para consulta de mapas
+  - name: Mapas com Dados
+    description: API para consulta de mapas que tem registro de queimadas
   - name: Queimadas
     description: API para consulta de dados de queimadas
   - name: Specification
@@ -33,6 +35,24 @@ paths:
       responses:
         200:
           description: Retorna dados de queimadas do municipio no formato GeoJson
+        204:
+          description: Não existem dados para a consulta
+  /mapas_com_dados/municipios:
+    get:
+      tags:
+        - Mapas com Dados
+      responses:
+        200:
+          description: Retorna nome de municipios que possuem queimadas no tempo delimitado
+        204:
+          description: Não existem dados para a consulta
+  /mapas_com_dados/estados:
+    get:
+      tags:
+        - Mapas com Dados
+      responses:
+        200:
+          description: Retorna nome de municipios que possuem queimadas no tempo delimitado
         204:
           description: Não existem dados para a consulta
   /queimadas/municipio/{id}:
